--- a/libs/i18n/src/lib/english/bio.json
+++ b/libs/i18n/src/lib/english/bio.json
@@ -81,7 +81,7 @@
     }
   },
   "credentials": {
-    "heading": "Credentials",
+    "heading": "Qualifications",
     "caption": "A little on Sal",
     "media": "/assets/signature.png",
     "button": {
