--- a/libs/i18n/src/lib/english/bio.json
+++ b/libs/i18n/src/lib/english/bio.json
@@ -16,8 +16,8 @@
         "company": "Oproma"
       },
       {
-        "date": "2022 - Present",
-        "title": "Chief Technology Officer",
+        "date": "2023 - Present",
+        "title": "Board Member",
         "company": "Cleanlist.ai"
       },
       {
